k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopcarts
  labels:
    app: shopcarts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopcarts
  template:
    metadata:
      labels:
        app: shopcarts
    spec:
      containers:
        - name: shopcarts
          image: localhost:5000/shopcarts:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/shopcarts/v1/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/shopcarts/v1/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
