k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopcarts
  labels:
    app: shopcarts
spec:
  type: ClusterIP
  selector:
    app: shopcarts
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
